--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+/node_modules/
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -172,3 +173,7 @@ cython_debug/
 
 # PyPI configuration file
 .pypirc
+
+# pixi environments
+.pixi
+*.egg-info
