--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,31 @@
-# Node modules
-node_modules/
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 
-# lockfiles
-# package-lock.json
-# yarn.lock
+# testing
+/coverage
 
-# logs
+# next.js
+/.next/
+/out/
+
+# production
+/build
+
+# misc
+.DS_Store
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# runtime
-.env
-/dist
+# local env files
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-.direnv/
+# Next.js image cache
+/.next/cache/images/
