--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@11labs/react": "^0.1.3",
+    "dotenv": "^16.5.0",
+    "elevenlabs": "^1.57.0",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
